Englarged navbar elements by 20%. Logo container now 4 columns to prevent wrapping of right floated navbar elements

--- a/app/assets/stylesheets/_buttons.scss
+++ b/app/assets/stylesheets/_buttons.scss
@@ -1,3 +1,8 @@
+.btn-navbar{
+  border-width: 2px!important;
+  font-size: 1.2em!important;
+}
+
 .btn
 {
   .disabled
@@ -7,7 +12,6 @@
 }
 
 .btn-domino {
-  /*max-width: 256px;*/
   height:3em;
   padding:1em;
   line-height: 1em;
@@ -22,9 +26,7 @@
   text-decoration: none;
   line-height: 1rem;
   padding: .5rem 1rem;
-  /*margin: 0;*/
   height: auto;
-  /*border: 1px solid transparent;*/
   vertical-align: middle;
   -webkit-appearance: none;
 }
